tests/toylang/neg/001695_mutation.toylang
program a = { while then a do sleep; } .
